small changes to About; avg precision in batch_processing; docExplore time calc in IR_tools

--- a/batch_processing.ipynb
+++ b/batch_processing.ipynb
@@ -12,42 +12,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# search settings\n",
     "\n",
-    "# # pre-NBhū\n",
-    "# priority_texts = [\n",
-    "#                     \"VS\", \"MīmS\", \"MMK\", \"ViVy\", \"NS\", \"YSBh\", \"SK\", \n",
-    "#                     \"ViṃśV\", \"NBh\", \"MīmBh\", \"ĀP\", \"PSV\", \"NPS\", \"TriṃśBh\", \n",
-    "#                     \"YD\", \"PDhS\", \"NV\", \"PPad\", \"ŚV\", \"PVSV\", \"PV\", \"PVin\", \n",
-    "#                     \"HB\", \"NB\", \"VN\", \"SAS\", \"SP\", \"BhāV\", \"BrS\", \"VibhrV\", \n",
-    "#                     \"VidhV\", \"PSṬ\", \"HBṬ\", \"NBṬ\", \"PVA\", \"VSṬ\", \"TUS\"\n",
-    "#                  ]\n",
-    "\n",
-    "# # # others\n",
-    "# non_priority_texts = [\n",
-    "#                     \"VyV\", \"NM\", \"NyKal\", \"NBhū\", \"SŚP\", \"ŚVK\", \"HBṬĀ\", \n",
-    "#                     \"NyKand\", \"AvNir\", \"PVV\", \"TCM\", \"MukV\"\n",
-    "#                     ]\n",
-    "\n",
-    "# NBhū\n",
+    "# pre-NBhū\n",
     "priority_texts = [\n",
-    "                    \"NBhū\"\n",
-    "                 ]\n",
-    "\n",
-    "# # others\n",
-    "non_priority_texts = [\n",
     "                    \"VS\", \"MīmS\", \"MMK\", \"ViVy\", \"NS\", \"YSBh\", \"SK\", \n",
     "                    \"ViṃśV\", \"NBh\", \"MīmBh\", \"ĀP\", \"PSV\", \"NPS\", \"TriṃśBh\", \n",
     "                    \"YD\", \"PDhS\", \"NV\", \"PPad\", \"ŚV\", \"PVSV\", \"PV\", \"PVin\", \n",
     "                    \"HB\", \"NB\", \"VN\", \"SAS\", \"SP\", \"BhāV\", \"BrS\", \"VibhrV\", \n",
-    "                    \"VidhV\", \"PSṬ\", \"HBṬ\", \"NBṬ\", \"PVA\", \"VSṬ\", \"TUS\",\n",
-    "                    \"VyV\", \"NM\", \"NyKal\", \"SŚP\", \"ŚVK\", \"HBṬĀ\", \n",
+    "                    \"VidhV\", \"PSṬ\", \"HBṬ\", \"NBṬ\", \"PVA\", \"VSṬ\", \"TUS\"\n",
+    "                 ]\n",
+    "\n",
+    "# # # others\n",
+    "non_priority_texts = [\n",
+    "                    \"VyV\", \"NM\", \"NyKal\", \"NBhū\", \"SŚP\", \"ŚVK\", \"HBṬĀ\", \n",
     "                    \"NyKand\", \"AvNir\", \"PVV\", \"TCM\", \"MukV\"\n",
     "                    ]\n",
+    "\n",
+    "# NBhū\n",
+    "# priority_texts = [\n",
+    "#                     \"NBhū\"\n",
+    "#                  ]\n",
+    "\n",
+    "# # others\n",
+    "# non_priority_texts = [\n",
+    "#                     \"VS\", \"MīmS\", \"MMK\", \"ViVy\", \"NS\", \"YSBh\", \"SK\", \n",
+    "#                     \"ViṃśV\", \"NBh\", \"MīmBh\", \"ĀP\", \"PSV\", \"NPS\", \"TriṃśBh\", \n",
+    "#                     \"YD\", \"PDhS\", \"NV\", \"PPad\", \"ŚV\", \"PVSV\", \"PV\", \"PVin\", \n",
+    "#                     \"HB\", \"NB\", \"VN\", \"SAS\", \"SP\", \"BhāV\", \"BrS\", \"VibhrV\", \n",
+    "#                     \"VidhV\", \"PSṬ\", \"HBṬ\", \"NBṬ\", \"PVA\", \"VSṬ\", \"TUS\",\n",
+    "#                     \"VyV\", \"NM\", \"NyKal\", \"SŚP\", \"ŚVK\", \"HBṬĀ\", \n",
+    "#                     \"NyKand\", \"AvNir\", \"PVV\", \"TCM\", \"MukV\"\n",
+    "#                     ]\n",
     "\n",
     "N_tf_idf_shallow = int( len(doc_ids) * 0.15)\n",
     "N_sw_w_shallow = 200\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "topics (0.978 s, 28381 comparisons, 0.000034 s/comparison)\n",
+      "topics (0.860 s, 28381 comparisons, 0.000030 s/comparison)\n",
       "PVA_629,vi :  0.9698818351650111\n",
       "PVSV_010,13_010,15 :  0.9523222396152328\n",
       "NBṬ_217,iii_217,v :  0.9382695193578188\n",
@@ -218,7 +218,7 @@
       "PVin_I,091,i_I,092,i :  0.8910857329884588\n",
       "PVin_II,123,i_II,123,ii :  0.8907492314066945\n",
       "\n",
-      "tf-idf (0.734 s, 4257 comparisons, 0.000172 s/comparison)\n",
+      "tf-idf (0.700 s, 4257 comparisons, 0.000165 s/comparison)\n",
       "NBhū_190,16 :  0.12741331434898207\n",
       "NBhū_349,4 :  0.09907481164467283\n",
       "NBhū_191,20_191,24 :  0.09530049559200143\n",
@@ -230,7 +230,7 @@
       "NBhū_148,4_148,7^1 :  0.07564425314613296\n",
       "NBhū_139,26_140,1 :  0.07368097485995155\n",
       "\n",
-      "sw_w (1.130 s, 200 comparisons, 0.005651 s/comparison)\n",
+      "sw_w (1.129 s, 200 comparisons, 0.005643 s/comparison)\n",
       "NBhū_519,6^2 :  23.0\n",
       "NBhū_59,11^1 :  23.0\n",
       "NBhū_303,18 :  19.4\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,6 +1285,408 @@
     "plt.xlabel('priority_topic')\n",
     "plt.ylabel('sw_w')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list(set( list(doc_id_suspected_pair_dict.keys())    ))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** NBhū_104,6^1 ***\n",
+      "PVin_I,034,i True\n",
+      "PVA_092,xv_093,ii False\n",
+      "PV_2.083ab_2.085cd False\n",
+      "PVA_093,iv False\n",
+      "NBh_0729,iii_0729,iv False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_104,6^2 ***\n",
+      "NV_206,11 False\n",
+      "NBh_1046,i_1046,iii False\n",
+      "NV_218,03 False\n",
+      "PV_3.148ab_3.150cd True\n",
+      "PVA_255,v_255,x False\n",
+      "DIDN'T FIND: NS_4.2.1_4.2.7\n",
+      "DIDN'T FIND: NS_4.2.8_4.2.14\n",
+      "NOT FOUND: 2\n",
+      "\n",
+      "*** NBhū_106,3 ***\n",
+      "NV_487,02_487,04 True\n",
+      "NBh_1072,i_1073,i False\n",
+      "PVA_344,viii_344,xi False\n",
+      "NBh_1048,i_1048,ii False\n",
+      "PVA_095,iii_095,iv False\n",
+      "DIDN'T FIND: NS_4.2.23_4.2.28\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_106,11_107,1 ***\n",
+      "PVin_I,035,i_I,036,ii True\n",
+      "NV_484,19 False\n",
+      "ViṃśV_87,i_89,ii False\n",
+      "PV_3.326ab_3.328cd False\n",
+      "NS_4.2.15_4.2.22 True\n",
+      "DIDN'T FIND: ViṃśV_93,i_95,i\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_107,6_108,1 ***\n",
+      "PVin_I,039,i_I,039,ii True\n",
+      "PVA_214,iii_214,iv False\n",
+      "PVA_352,xi_353,i False\n",
+      "TUS_ii,103,vi False\n",
+      "PVin_I,041,i False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_108,4_108,6 ***\n",
+      "PVin_I,040,i True\n",
+      "TUS_ii,86,i False\n",
+      "PSV_5,7_5,16 False\n",
+      "PSṬ_I,153,i_I,153,ii False\n",
+      "PSṬ_I,85,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_108,10 ***\n",
+      "PVin_I,041,i True\n",
+      "PV_3.431cd_3.434cd True\n",
+      "PVA_432,vii_432,ix False\n",
+      "PVin_I,039,i_I,039,ii False\n",
+      "PSṬ_I,53,ii^1 False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_109,1 ***\n",
+      "PV_3.431cd_3.434cd True\n",
+      "PVA_432,vii_432,ix False\n",
+      "PVA_432,x False\n",
+      "PVA_352,vii False\n",
+      "PVA_315,ii^1 False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_109,7 ***\n",
+      "PVin_I,035,i_I,036,ii True\n",
+      "PV_3.329ab_3.332ab True\n",
+      "PVA_365,iii_365,iv False\n",
+      "PVA_366,iv False\n",
+      "TUS_254,i_254,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_115,1_115,4 ***\n",
+      "NV_476,01^1 False\n",
+      "HBṬ_171,ii^3 False\n",
+      "PVA_341,v_341,viii False\n",
+      "PVA_289,x_289,xii False\n",
+      "PSṬ_I,68,ii False\n",
+      "DIDN'T FIND: PV_3.281ab_3.284ab\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_115,18 ***\n",
+      "PVA_290,iv_290,vi True\n",
+      "PVA_289,xiv_290,ii True\n",
+      "PVA_290,iii True\n",
+      "PVA_292,xv False\n",
+      "PVA_158,ii_158,iv False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_116,7 ***\n",
+      "NV_454,17_454,18 True\n",
+      "NS_4.1.35_4.1.42 True\n",
+      "NBh_0986,i_0988,ii False\n",
+      "NV_488,12_488,13 False\n",
+      "NBh_1076,i_1076,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_117,3^1 ***\n",
+      "PVA_288,vii True\n",
+      "PVA_345,vii False\n",
+      "PVA_208,iv^1 False\n",
+      "ŚV_4.218ab_4.220cd False\n",
+      "PVA_288,i_288,iii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_117,3^2 ***\n",
+      "PVA_288,vii True\n",
+      "PVA_252,viii_253,iii False\n",
+      "PVA_286,vi_286,ix False\n",
+      "PV_3.208cd_3.211ab True\n",
+      "PVA_463,ii_463,iv False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_121,2^2 ***\n",
+      "TUS_174,iii^2 False\n",
+      "PVin_I,046,i_I,046,iii True\n",
+      "TUS_ii,86,i False\n",
+      "PSṬ_I,85,i False\n",
+      "TUS_178,ii_180,i False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_124,8^2 ***\n",
+      "PV_2.066ab_2.069ab True\n",
+      "PVA_082,iv_082,v False\n",
+      "PVA_081,iii_081,iv False\n",
+      "HBṬ_181,ii^2 False\n",
+      "PVA_256,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_125,15 ***\n",
+      "ŚV_5,4.250ab_5,4.253ab True\n",
+      "TriṃśBh_104,i_104,iii False\n",
+      "PVSV_059,18_060,02 False\n",
+      "PVA_211,ix_211,xi False\n",
+      "PVA_101,xv_102,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_126,6^1 ***\n",
+      "NV_229,16_229,17 False\n",
+      "NBh_0500,ii_0500,iii False\n",
+      "NS_2.1.33_2.1.39 True\n",
+      "NV_230,17 False\n",
+      "NBh_0497,i_0497,ii False\n",
+      "DIDN'T FIND: NS_4.2.8_4.2.14\n",
+      "DIDN'T FIND: NBh_1047,i_1047,ii\n",
+      "NOT FOUND: 2\n",
+      "\n",
+      "*** NBhū_126,6^3 ***\n",
+      "NBh_1054,i_1054,iii False\n",
+      "NV_477,04_477,05 False\n",
+      "NV_227,13_227,14 False\n",
+      "NS_4.2.8_4.2.14 True\n",
+      "NBh_0497,i_0497,ii False\n",
+      "DIDN'T FIND: NS_2.1.33_2.1.39\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_131,11_131,17 ***\n",
+      "NV_218,03 False\n",
+      "PVin_I,032,ii^2 False\n",
+      "PVA_282,i_282,iv False\n",
+      "PSṬ_I,67,ii False\n",
+      "PDhS_66,20_67,7 False\n",
+      "DIDN'T FIND: ViṃśV_93,i_95,i\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_132,2 ***\n",
+      "PVin_I,035,i_I,036,ii False\n",
+      "PSṬ_I,147,i_I,147,iii False\n",
+      "NV_480,10_480,15 False\n",
+      "PVA_208,viii^2 False\n",
+      "NS_4.2.15_4.2.22 True\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_132,11^1 ***\n",
+      "PVin_I,039,i_I,039,ii False\n",
+      "TUS_ii,104,i_ii,104,ii False\n",
+      "PVA_362,i_362,ii False\n",
+      "TUS_ii,104,iii_ii,104,iv False\n",
+      "PVin_I,041,i False\n",
+      "DIDN'T FIND: TUS_ii,102,i_ii,102,ii\n",
+      "DIDN'T FIND: PV_3.386cd_3.389cd\n",
+      "NOT FOUND: 2\n",
+      "\n",
+      "*** NBhū_138,9 ***\n",
+      "PVA_353,xiii_353,xv False\n",
+      "PVA_353,x True\n",
+      "NV_076,09^2 False\n",
+      "PVA_195,iii_195,iv False\n",
+      "YD_II,172,v False\n",
+      "DIDN'T FIND: PVA_353,xi_353,xii\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_139,1_139,3 ***\n",
+      "PVA_353,xiii_353,xv True\n",
+      "PVin_I,086,ii^1 True\n",
+      "PVSV_022,06_022,20 True\n",
+      "PVA_643,vii_643,xiii False\n",
+      "PV_2.178cd_2.181cd False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_139,26_140,1 ***\n",
+      "PV_3.326ab_3.328cd True\n",
+      "PVA_353,ii_353,iv False\n",
+      "HBṬ_153,i^2 False\n",
+      "PVA_295,xiv False\n",
+      "TUS_096,i_096,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_140,21 ***\n",
+      "PVin_I,046,i_I,046,iii True\n",
+      "NBṬ_71,ii_72,i False\n",
+      "TUS_174,iii^2 False\n",
+      "PVA_267,ii^1 False\n",
+      "PSṬ_I,75,i False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_142,2 ***\n",
+      "TUS_148,i False\n",
+      "NV_122,17^3 False\n",
+      "PV_3.329ab_3.332ab True\n",
+      "PVin_I,035,i_I,036,ii False\n",
+      "PVA_365,iii_365,iv False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_142,12 ***\n",
+      "PVA_387,xvii_387,xxii True\n",
+      "PVA_359,iv_359,vi True\n",
+      "PVA_360,vii_360,viii False\n",
+      "PSṬ_I,75,i False\n",
+      "PVA_361,xiii_361,xvi False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_142,19 ***\n",
+      "PVin_I,091,i_I,092,i True\n",
+      "PVSV_010,19_010,21 True\n",
+      "PVSV_010,13_010,15 True\n",
+      "PVin_I,092,ii_I,092,iii True\n",
+      "PVSV_011,05_011,12 False\n",
+      "DIDN'T FIND: PVA_361,xiii_361,xvi\n",
+      "NOT FOUND: 1\n",
+      "\n",
+      "*** NBhū_144,20^1 ***\n",
+      "PVA_359,iv_359,vi False\n",
+      "PVA_361,xiii_361,xvi True\n",
+      "NV_489,06^3 False\n",
+      "TriṃśBh_104,i_104,iii False\n",
+      "PVin_II,098,ii_II,098,iii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_145,15 ***\n",
+      "PVA_360,ix True\n",
+      "PVA_360,x True\n",
+      "NBh_1083,i_1084,i False\n",
+      "NV_489,06^3 False\n",
+      "PVA_361,xiii_361,xvi False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_145,22 ***\n",
+      "PVA_360,xi_361,i True\n",
+      "PVA_360,x True\n",
+      "PVA_237,iv False\n",
+      "NV_055,03^3 False\n",
+      "PVA_012,i_012,vi False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_146,7 ***\n",
+      "PVA_361,ii_361,iii True\n",
+      "PVA_360,xi_361,i True\n",
+      "PVA_360,ix False\n",
+      "PVA_218,viii^1 False\n",
+      "PVSV_171,02_171,05 False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_146,14_146,18 ***\n",
+      "PVA_361,iv_361,vi True\n",
+      "PVA_361,ii_361,iii True\n",
+      "PVA_630,v_630,viii False\n",
+      "PVA_307,xiv False\n",
+      "PVA_409,iv_409,vii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_146,21 ***\n",
+      "PVA_361,vii True\n",
+      "PVA_361,iv_361,vi True\n",
+      "HBṬ_43,i^1 False\n",
+      "PVA_454,iv^2 False\n",
+      "PVA_197,iii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_147,3_147,6 ***\n",
+      "PVA_361,x_361,xii True\n",
+      "PVA_486,vii False\n",
+      "HBṬ_127,i^2 False\n",
+      "BrS_106,ii^3 False\n",
+      "NPS_1,4_1,8 False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_149,4_149,16 ***\n",
+      "PVA_366,v_366,ix True\n",
+      "NV_222,07^2 False\n",
+      "PSṬ_II,88,i_II,88,ii False\n",
+      "PVA_455,viii_455,ix False\n",
+      "PVA_174,i False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_149,19 ***\n",
+      "PVA_366,iv True\n",
+      "PSṬ_I,102,ii False\n",
+      "PVA_382,xvi_382,xx False\n",
+      "PV_3.503ab_3.505cd False\n",
+      "PVA_426,xiv_426,xviii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_150,1 ***\n",
+      "HB_3,1^1 True\n",
+      "HBṬ_26,i False\n",
+      "PV_2.001ab_2.005cd True\n",
+      "PVA_030,i_030,ii False\n",
+      "PVA_030,viii_030,ix False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_150,6^2 ***\n",
+      "PVin_II,001,i_II,001,ii True\n",
+      "NB_3.1_3.8 True\n",
+      "PVA_469,ix_469,xi False\n",
+      "NBṬ_188,iii_189,i False\n",
+      "PVin_II,007,ii_II,008,ii False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_153,4_153,7 ***\n",
+      "PVA_356,iv_356,vii True\n",
+      "PVA_407,ii_407,v False\n",
+      "PVA_415,xii_415,xv False\n",
+      "ŚV_5,4.108cd_5,4.111cd False\n",
+      "PVA_356,xv_357,i False\n",
+      "NOT FOUND: 0\n",
+      "\n",
+      "*** NBhū_153,14 ***\n",
+      "SP_60–64 False\n",
+      "TUS_ii,100,iv False\n",
+      "VidhV_120,i^3 False\n",
+      "PVA_326,viii_326,x False\n",
+      "TUS_ii,101,ii_ii,101,iii False\n",
+      "DIDN'T FIND: PVA_358,ix^4\n",
+      "NOT FOUND: 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for average precision calculation\n",
+    "\n",
+    "for k in list(doc_id_suspected_pair_dict.keys()):\n",
+    "    print(\"***\",k,\"***\")\n",
+    "    _,_,_,_, overall_results = get_closest_docs_2(k, search_depth='shallow', prioritze=True, display_depth=5, mode='return_values')\n",
+    "    top_5 = list(overall_results.keys())[:5]\n",
+    "\n",
+    "    for i, doc in enumerate(top_5):\n",
+    "#         result_string = \"TP (True)\" if doc in doc_id_suspected_pair_dict[k] else \"FP (False)\"\n",
+    "#         print(i+1, doc, result_string)\n",
+    "        result = True if doc in doc_id_suspected_pair_dict[k] else False\n",
+    "        print(doc, result)\n",
+    "    \n",
+    "    not_found = 0\n",
+    "    for doc in doc_id_suspected_pair_dict[k]:\n",
+    "        if doc not in top_5:\n",
+    "            not_found += 1\n",
+    "            print(\"DIDN'T FIND:\", doc)\n",
+    "    print(\"NOT FOUND:\", not_found)\n",
+    "    print()"
    ]
   },
   {
